--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -672,6 +672,7 @@
   .inner-carousel
   .carousel-content {
   white-space: nowrap;
+  transition: transform 1s ease-in-out;
 }
 .new-release-row
   .row-body
@@ -681,6 +682,15 @@
   .inner-carousel
   .carousel-content
   .slider-item {
+  padding-left: 0;
+  width: 16.66666667%;
+  box-sizing: border-box;
+  z-index: 1;
+  display: inline-block;
+  position: relative;
+  white-space: normal;
+  vertical-align: top;
+  padding: 0 2px;
 }
 
 .new-release-row
@@ -704,6 +714,9 @@
   .slider-item
   .item-card
   .item-card-container {
+  display: block;
+  position: relative;
+  z-index: 1;
 }
 
 .new-release-row
@@ -731,6 +744,11 @@
   .item-card-container
   .item-card-title
   a {
+  display: block;
+  text-decoration: none;
+  cursor: pointer;
+  color: #fff;
+  background-color: transparent;
 }
 
 .new-release-row
@@ -746,6 +764,12 @@
   .item-card-title
   a
   .item-card-box {
+  width: 100%;
+  height: 0;
+  position: relative;
+  overflow: hidden;
+  padding: 28.125% 0;
+  border-radius: 4px;
 }
 
 .new-release-row
@@ -762,4 +786,86 @@
   a
   .item-card-box
   img {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  border: 0;
+}
+
+.new-release-row
+  .row-body
+  .track-container
+  .hover-field
+  .carousel-slider
+  .handle {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 20;
+  width: 4%;
+  text-align: center;
+  justify-content: center;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+}
+
+.new-release-row
+  .row-body
+  .track-container
+  .hover-field
+  .carousel-slider
+  .handle-next {
+  background: rgba(20, 20, 20, 0.5);
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  right: 0;
+  cursor: pointer;
+  width: 60px;
+}
+
+.new-release-row
+  .row-body
+  .track-container
+  .hover-field
+  .carousel-slider
+  .handle-prev {
+  background: rgba(20, 20, 20, 0.5);
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  left: 0;
+  cursor: pointer;
+  width: 60px;
+}
+
+.new-release-row
+  .row-body
+  .track-container
+  .hover-field
+  .carousel-slider
+  .handle-next
+  b {
+  transform-origin: 45% 50%;
+  font-size: 2em;
+  display: none;
+  height: auto;
+  align-self: center;
+  font-size: 2.5vw;
+  transition: -webkit-transform 0.1s ease-out 0s;
+  transition: transform 0.1s ease-out 0s;
+  transition: transform 0.1s ease-out 0s, -webkit-transform 0.1s ease-out 0s,
+    -moz-transform 0.1s ease-out 0s, -o-transform 0.1s ease-out 0s;
+}
+
+.new-release-row .row-body .track-container .hover-field .carousel-slider svg {
+  height: 1.5em;
+  width: 1.625em;
+  margin-top: 55px;
 }
